# PMP_IV

./: .gitignore  DOCKER_USER  Dockerfile  README.md  example_models.py  iv.yaml  pruebas.py  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: main.yml  unit_test.yml
DatosJupyter/: Datos.py  Tests.py
doc/: HistoriasUsuarios_Hitos.md  User_Journey.md
doc/Comprobaciones/: 0_Requisitos.md  1_Comprobacion_HU.md  1_Comprobacion_Hitos.md
docs/: Assertion_library.md  CI.md  Docker_image.md  Gestor_Dependencias.md  Gestor_Tareas.md  Test_runner.md
docs/Comprobaciones/: 0_Requisitos.md
models/: fecha.py
notebooks/: Datos.ipynb  PruebaDatos.ipynb  Tests.ipynb
pmp_iv/: coordenada.py  correlacion_area.py  eda.py  estado.py  fecha.py  fwi.py  model_validation.py
pmp_iv/config/: model_validation.py
pmp_iv/enums/: day.py  month.py  regression_algorithm.py
pmp_iv/forest_prediction/: correlacion_area.py  eda.py  model_building.py
pmp_iv/models/: coordenada.py  correlacion_area.py  eda.py  estado.py  fecha.py  fwi.py
pmp_iv/segmentacionCSV/: Datos.py  Tests.py
pmp_iv/utils/: validation.py
pmp_iv/validaciones/: model_validation.py
src/config/: model_validation.py
src/models/: coordenada.py  estado.py  fecha.py  fwi.py
tests/: test_Datos.py  test_Jupyter.py  test_pmp_iv.py
