[tool.poetry]
name = "PMP_IV"
version = "0.0.5"
description = "Gestor dependencias para objetivo 3 en adelante"
authors = ["Pablo Morenilla <MauronMP>"]
readme = ["docs/Gestor_Dependencias.md", "README.md"]
repository = "https://github.com/MauronMP/PMP_IV/"
documentation = "https://github.com/MauronMP/PMP_IV/tree/Objetivo-3/docs" #Temporal, después será la rama main

packages = [
    { include = "pmp_iv/**/*.py" },
    { include = "pmp_iv/*.py" },
]


[tool.poetry.dependencies]
python = ">=3.8" 
pyhamcrest = "^2.0.4"
pytest = "^7.2.0"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"


