[tool.poetry]
name = "PMP_IV"
version = "0.0.5"
description = "Gestor dependencias para objetivo 3 en adelante"
authors = ["Pablo Morenilla <MauronMP>"]
repository = "https://github.com/MauronMP/PMP_IV/"
documentation = "https://github.com/MauronMP/PMP_IV/tree/Objetivo-5/docs" 

[tool.poetry.dependencies]
python = ">=3.8" 
pyhamcrest = "^2.0.4"
pytest = "^7.2.0"
invoke = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
invoke = "^1.7.3"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
]